--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="stylesheets/second-card.css">
     <link rel="stylesheet" href="stylesheets/effects.css">
     <link rel="stylesheet" href="stylesheets/places.css">
-    <title>Weather App</title>
+    <title>Weather Website</title>
 </head>
 
 <body>
